--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="ui fluid two wide column">
-            <div class="button ui inverted blue"> Random Wiki </div>
+            <div id="random" class="button ui inverted blue"> Random Wiki </div>
         </div>
     </div>
     <ul id="container" class="column"></ul>
