added design and logic for loading wikipedia results

--- a/index.html
+++ b/index.html
@@ -31,12 +31,26 @@
                 <input id="search" class="prompt" type="text" placeholder="Search...">
                 <i class="search icon"></i>
             </div>
+            <span id="error" style="color:red"></span>
         </div>
         <div class="ui fluid two wide column">
             <div id="random" class="button ui inverted blue"> Random Wiki </div>
         </div>
     </div>
-    <ul id="container" class="column"></ul>
+
+    <div class="ui two column centered grid">
+        <div class="column">
+            <div class="ui link three cards">
+            </div>
+        </div>
+        <!-- <div class="ui six fluid wide column">
+        </div>
+        <div class="ui eight fluid wide column">
+            <div class="ui link three cards">
+            </div>
+        </div> -->
+    </div>
+
     <script src="bower_components/moment/min/moment.min.js"></script>
     <script src="./src/scripts.js"></script>
 </body>
